[gd_scene load_steps=2 format=3 uid="uid://crdpb0csceso5"]

[ext_resource type="Script" path="res://database/SQLiteController.gd" id="1_ybj8h"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ybj8h")

[node name="CreateTable" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 23.0
offset_right = 179.0
offset_bottom = 93.0
text = "Create Table"

[node name="InsertData" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 121.0
offset_right = 179.0
offset_bottom = 191.0
text = "Insert Data"

[node name="SelectData" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 230.0
offset_right = 179.0
offset_bottom = 300.0
text = "Select Data"

[node name="UpdateData" type="Button" parent="."]
layout_mode = 0
offset_left = 228.0
offset_top = 22.0
offset_right = 382.0
offset_bottom = 92.0
text = "Update Data"

[node name="DeleteData" type="Button" parent="."]
layout_mode = 0
offset_left = 228.0
offset_top = 125.0
offset_right = 382.0
offset_bottom = 195.0
text = "Delete Data"

[node name="CustomSelect" type="Button" parent="."]
layout_mode = 0
offset_left = 228.0
offset_top = 230.0
offset_right = 382.0
offset_bottom = 300.0
text = "Custom Select"

[node name="ItemName" type="Label" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 52.0
offset_right = 496.0
offset_bottom = 75.0
text = "Item Name"

[node name="ItemNameField" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 510.0
offset_top = 48.0
offset_right = 627.0
offset_bottom = 81.0

[node name="ItemEffect" type="Label" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 107.0
offset_right = 502.0
offset_bottom = 130.0
text = "Item Effect"

[node name="ItemEffectField" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 510.0
offset_top = 103.0
offset_right = 627.0
offset_bottom = 136.0

[node name="ItemCost" type="Label" parent="."]
offset_left = 440.0
offset_top = 159.0
offset_right = 527.0
offset_bottom = 182.0
text = "Item Cost"

[node name="ItemCostField" type="TextEdit" parent="."]
offset_left = 510.0
offset_top = 155.0
offset_right = 627.0
offset_bottom = 188.0

[connection signal="button_down" from="CreateTable" to="." method="_on_create_table_button_down"]
[connection signal="button_down" from="InsertData" to="." method="_on_insert_data_button_down"]
[connection signal="button_down" from="SelectData" to="." method="_on_select_data_button_down"]
[connection signal="button_down" from="UpdateData" to="." method="_on_update_data_button_down"]
[connection signal="button_down" from="DeleteData" to="." method="_on_delete_data_button_down"]
[connection signal="button_down" from="CustomSelect" to="." method="_on_custom_select_button_down"]
